
add_library(boost INTERFACE)

target_include_directories(boost INTERFACE
        algorithm/include
        align/include
        array/include
        asio/include
        assert/include
        atomic/include
        bind/include
        core/include
        chrono/include
        concept_check/include
        config/include
        container/include
        conversion/include
        date_time/include
        detail/include
        exception/include
        filesystem/include
        foreach/include
        function/include
        function_types/include
        functional/include
        fusion/include
        integer/include
        io/include
        iterator/include
        lambda/include
        lexical_cast/include
        math/include
        move/include
        mpl/include
        numeric_conversion/include
        optional/include
        phoenix/include
        predef/include
        preprocessor/include
        proto/include
        random/include
        range/include
        ratio/include
        regex/include
        smart_ptr/include
        spirit/include
        static_assert/include
        system/include
        thread/include
        throw_exception/include
        tokenizer/include
        tuple/include
        type_index/include
        type_traits/include
        typeof/include
        utility/include
        uuid/include
        variant/include
    )
